--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.3
   curved_navigation_bar: ^1.0.3
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
