--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,17 @@ dependencies:
   get_storage: ^2.0.3
 
 dev_dependencies:
+  flutter_native_splash: ^1.3.1
   flutter_test:
     sdk: flutter
 
+flutter_native_splash:
+  color: "e4e7f2"
+  color_dark: "000000"
+  image: "assets/icons/splash.png"
+  image_dark: "assets/icons/dark1.png"
+  android: true
+  ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
