--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get_storage: ^2.0.3
 
 dev_dependencies:
-  flutter_native_splash: ^1.3.1
+  flutter_native_splash: ^2.2.0+1
   flutter_test:
     sdk: flutter
 
