--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.6.3
   curved_navigation_bar: ^1.0.3
   get_storage: ^2.0.3
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_native_splash: ^2.2.0+1
