--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   get_storage: ^2.0.3
   http: ^0.13.4
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_native_splash: ^2.2.0+1
