--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get_storage: ^2.0.3
   http: ^0.13.4
   socket_io_client: ^1.0.2
+  flutter_signin_button: ^2.0.0
+  url_launcher: ^6.1.3
 
 dev_dependencies:
   flutter_native_splash: ^2.2.0+1
